<resources>
    <string name="camera_focus_mode_preference">continuous-picture</string>
    <string name="camera_setting_preview_size_default">1920x1080</string>
    <string name="camera_setting_picture_size_default">16x9</string>
    <string name="camera_setting_time_print_default">off</string>
    <string name="camera_setting_takepicture_type_default">0</string>
    <string name="camera_setting_focus_type_default">0</string>
    <string name="camera_setting_goutu_line_default">off</string>
    <string name="camera_setting_ce_guang_default">center-weighted</string>
    <string name="camera_setting_square_pic_default">off</string>
    <string name="camera_setting_video_quality_default">@string/pref_video_quality_default</string>
    <string name="camera_setting_video_type_default">normal</string>
    <string name="camera_setting_video_focus_type_default">on</string>
    <string name="camera_setting_video_wendingqi_default">off</string>
    <string name="camera_setting_video_flash_off">off</string>
    <string name="camera_setting_video_flash_torch">torch</string>
    <string name="camera_setting_flash_default">auto</string>
    <string name="camera_setting_shui_ping_yi_default">off</string>
    <string name="camera_setting_location_default">off</string>
    <string name="camera_setting_voice_key_default">shutter</string>
    <string name="camera_setting_fringer_default">0</string>
    <string name="camera_setting_reset_to_default_default">0</string>
    <string name="camera_setting_storage_default">sd</string>
    <string name="camera_setting_about_info_default">0</string>
    <string name="camera_setting_quick_launch_default">0</string>
    <string name="camera_setting_shutter_voice_default">on</string>
    <string name="camera_setting_pin_shan_default">auto</string>
    <string name="camera_setting_screen_bright_default">0</string>
    <string name="camera_setting_watch_default">off</string>
    <string name="camera_setting_hdr_default">off</string>
    <string name="camera_setting_video_default">normal</string>
    <string name="camera_setting_union_default">off</string>
    <string name="camera_setting_auto_smart_default">on</string>
    <string name="camera_setting_pro_smart_default">on</string>
    <string name="camera_setting_ae_af_default">off</string>
    <string name="camera_front_water_default">off</string>
    <string name="camera_front_supplylight_default">off</string>
    <string name="camera_front_delay_default">off</string>
    <string name="camera_front_touch_default">off</string>
    <string name="camera_front_voice_default">off</string>
    <string name="camera_front_blink_default">off</string>
    <string name="camera_front_gesture_default">off</string>
    <string name="camera_front_beauty_default">smart</string>
    <string name="camera_front_mirror_default">off</string>
    <string name="camera_front_11_default">off</string>
    <string name="camera_front_video_default">high</string>
    <string name="camera_front_setting_picture_size_default">4x3</string>
    <string name="camera_front_setting_preview_size_low_video">352x288</string>
    <string name="camera_front_video_fast_default">2</string>
    <string name="camera_front_video_slow_default">2</string>
    <string name="camera_setting_diance_liandong_default">0</string>
    <string name="pref_video_quality_default">@string/pref_video_quality_1920x1080</string>
    <string name="pref_video_quality_3840x2160">8</string>
    <string name="pref_video_quality_2560x1440">10007</string>
    <string name="pref_video_quality_1920x1080">6</string>
    <string name="pref_video_quality_1280x720">5</string>
    <string name="pref_video_quality_320x240">7</string>
    <string name="pref_video_quality_176x144">2</string>
    <string name="pref_video_quality_640x480">10000</string>
    <string name="pref_video_quality_800x480">-1</string>
    <string name="pref_video_quality_352x288">3</string>
    <string name="pref_video_quality_720x480">4</string>
    <string name="pref_video_quality_1920x1440">-1</string>
    <string name="pref_video_quality_4096x2160">10001</string>
    <string name="touch_tip">Tap screen to snap</string>
    <string name="voice_tip">Say \"%1$s\" or \"%2$s\" to capture</string>
    <string name="smile_tip">Auto capture when smile is detected</string>
    <string name="camera_shortcut_feilin">Film</string>
    <string name="camera_shortcut_union">Spot meter link</string>
    <string name="camera_shortcut_hdr">HDR</string>
    <string name="camera_shortcut_sound">Capture sound</string>
    <string name="camera_shortcut_none" />
    <string name="camera_wait">Please wait...</string>
    <string name="camera_auto_setting_smart">Smart scene recognition</string>
    <string name="camera_first_enter_front_spec">Select snap approach</string>
    <string name="camera_enter_blink_spec">Please slowly blink</string>
    <string name="camera_enter_gesture_spec">make V sign or wave hand</string>
    <string name="camera_front_photofunction_delay">3s timer</string>
    <string name="camera_front_photofunction_touch">Tap</string>
    <string name="camera_front_photofunction_voice">Voice</string>
    <string name="camera_front_photofunction_blink">Blink</string>
    <string name="camera_front_photofunction_gesture">Hand sign</string>
    <string name="camera_front_frontsetting_supply">Fill light</string>
    <string name="camera_front_frontsetting_mirror">Photo mirror</string>
    <string name="camera_front_frontsetting_11">1:1 photo</string>
    <string name="camera_front_frontsetting_size">Aspect ratio</string>
    <string name="camera_front_frontsetting_size43">4:3</string>
    <string name="camera_front_frontsetting_size169">16:9</string>
    <string name="camera_front_setting_supply_panel_switch_str">Off</string>
    <string name="camera_front_setting_supply_panel_pink_str">Pink</string>
    <string name="pref_camera_animate_capture_title">Camera animation</string>
    <string name="pref_camera_antibanding_title">Stroscopic</string>
    <string name="pref_camera_auxiliaryline_title">Composition guide lines</string>
    <string name="pref_camera_focus_mode_title">Focus mode</string>
    <string name="pref_camera_jpeg_qual_title">Image quality</string>
    <string name="pref_camera_metering_title">Light metering</string>
    <string name="pref_camera_screen_brightness_title">Preview Brightness</string>
    <string name="pref_camera_shutter_sound_title">Camera Sounds</string>
    <string name="pref_camera_sound_capture_title">Voice photos</string>
    <string name="pref_camera_storage_title">Save at</string>
    <string name="pref_camera_touch_shoot_title">Touch control shot</string>
    <string name="pref_camera_volume_title">Volume Key</string>
    <string name="ab_website">Website</string>
    <string name="pref_camera_id_title">Choose camera</string>
    <string name="pref_camera_id_default">0</string>
    <string name="pref_camera_timer_title">Countdown timer</string>
    <string name="pref_camera_timer_default">0</string>
    <string name="pref_camera_timer_sound_default">@string/setting_on_value</string>
    <string name="pref_camera_timer_sound_title">Beep during countdown</string>
    <string name="pref_video_quality_title">Video quality</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camera_picturesize_title">Picture size</string>
    <string name="pref_camera_picturesize_default">3040x1824</string>
    <string name="pref_camera_focus_mode_default">continuous-picture</string>
    <string name="pref_camera_screen_brightness_default">optimal</string>
    <string name="pref_camera_focusmode_title">Focus mode</string>
    <string name="pref_camera_flashmode_default">auto</string>
    <string name="pref_camera_flashmode_title">Flash mode</string>
    <string name="pref_camera_whitebalance_default">auto</string>
    <string name="pref_camera_whitebalance_title">White balance</string>
    <string name="pref_camera_scenemode_default">auto</string>
    <string name="pref_camera_scenemode_title">Scene mode</string>
    <string name="pref_camera_scenemode_entry_hdr">HDR</string>
    <string name="pref_exposure_title">Exposure</string>
    <string name="pref_exposure_default">0</string>
    <string name="pref_camera_hdr_default">@string/setting_off_value</string>
    <string name="pref_camera_recordlocation_default">off</string>
    <string name="pref_camera_effect_default">none</string>
    <string name="pref_camera_isovalue_default">auto</string>
    <string name="pref_camera_isovalue_title">ISO</string>
    <string name="pref_camera_auxiliaryline_default">0</string>
    <string name="pref_camera_metering_default">matrix</string>
    <string name="pref_camera_brightness_title">Brightness</string>
    <string name="pref_camera_contrast_title">Contrast</string>
    <string name="pref_camera_saturation_title">Saturation</string>
    <string name="pref_camera_sharpness_title">Sharpness</string>
    <string name="pref_camera_brightness_default">0</string>
    <string name="pref_camera_jpeg_qual_default">100</string>
    <string name="pref_camera_antibanding_default">auto</string>
    <string name="pref_camera_touch_shoot_default">off</string>
    <string name="pref_camera_storage_default">sd</string>
    <string name="pref_camera_shutter_sound_default">1</string>
    <string name="pref_camera_volume_default">1</string>
    <string name="pref_camera_voice_shutter_default">off</string>
    <string name="pref_camera_animate_capture_default">1</string>
    <string name="pref_camera_smart_light_title">Art nightscape</string>
    <string name="pref_camera_effects_title">Effects</string>
    <string name="camera_setting_gps_tag">GPS LOC</string>
    <string name="gallery_about_other_version_new">Other copyright information</string>
    <string name="about_powered_by">"Powered by:
"</string>
    <string name="about_lega_version">"
LeGA %s"</string>
    <string name="about_leimage_version">"
LeImage %s"</string>
    <string name="about_lecsc_version">"
LeCSC %s"</string>
    <string name="about_lescf_version">"
LeSCF %s"</string>
    <string name="about_copyright_scgteam">"Copyright © 2012-2013, Lenovo SCG Team
"</string>
    <string name="about_open_lib">"Special Thanks:
"</string>
    <string name="about_opencv">"Copyright © 2000-2008, Intel Corporation, all rights reserved. 

Copyright © 2008-2011, Willow Garage Inc., all rights reserved. 

Third party copyright are property of their respective owners.
"</string>
    <string name="about_libjpeg">"Copyright © 2009, Pierre Ossman &lt;ossman@cendio.se> for Cendio AB
"</string>
    <string name="about_neven_version">"Copyright © 2011 Google Inc. All rights reserved.
"</string>
    <string name="about_skia_version">"Copyright © 2011 Google Inc. All rights reserved.
"</string>
    <string name="opencv_2_4_3">"
opencv-2.4.3"</string>
    <string name="libjpeg_turbo_1_2_1">libjpeg-turbo-1.2.1</string>
    <string name="neven_name">neven</string>
    <string name="skia_name">skia</string>
    <string name="null_r_n">"
"</string>
    <string name="gif_lib_4_1_6">giflib 4.1.6</string>
    <string name="gif_lib_copright">"Corpright © 1997 Eric S. Raymond
"</string>
    <string name="lenovo_about_update">Upgrade</string>
    <string name="lenovo_about_qqgroup">QQ Group</string>
    <string name="lenovo_about_weibo">Sina Weibo</string>
    <string name="lenovo_about_email">Email Address</string>
    <string name="lenovo_about_AboutInfoCopyRight_Cn">联想公司 版权所有</string>
    <string name="lenovo_about_AboutInfoCopyRight_En">Copyright © 2013 Lenovo All Rights Reserved</string>
    <string name="ab_contacts">Contacts</string>
    <string name="ab_feedback">Feedback</string>
    <string name="ab_weixin">WeChat</string>
    <string name="ab_bbs">Forum</string>
    <string name="lenovo_about_app_name">App Name</string>
    <string name="lenovo_about_version_name">Version Name</string>
</resources>