<?xml version="1.0" encoding="utf-8"?>
<CameraSettingPreferenceGroup camera:title="@string/pref_camera_settings_category"
  xmlns:camera="http://schemas.android.com/apk/res/com.lenovo.scg">
    <CameraSettingIconListPreference camera:title="@string/pref_camera_flashmode_title" camera:key="pref_camera_flashmode_key" camera:defaultValue="@string/pref_camera_flashmode_default" camera:entryValues="@array/pref_camera_flashmode_entryvalues" camera:entries="@array/pref_camera_flashmode_entries" camera:labelList="@array/pref_camera_flashmode_entries" camera:icons="@array/camera_flashmode_icons" camera:largeIcons="@array/camera_flashmode_largeicons" />
    <CameraSettingIconListPreference camera:title="@string/pref_exposure_title" camera:key="pref_camera_exposure_key" camera:defaultValue="@string/pref_exposure_default" camera:singleIcon="@drawable/camera_setting_baoguangdu_on" />
    <CameraSettingIconListPreference camera:title="@string/pref_camera_scenemode_title" camera:key="pref_camera_scenemode_key" camera:defaultValue="@string/pref_camera_scenemode_default" camera:entryValues="@array/pref_camera_scenemode_entryvalues" camera:entries="@array/pref_camera_scenemode_entries" camera:labelList="@array/pref_camera_scenemode_entries" camera:icons="@array/pref_camera_scenemode_icons" camera:largeIcons="@array/pref_camera_scenemode_icons" />
    <CameraSettingIconListPreference camera:title="@string/pref_camera_whitebalance_title" camera:key="pref_camera_whitebalance_key" camera:defaultValue="@string/pref_camera_whitebalance_default" camera:entryValues="@array/pref_camera_whitebalance_entryvalues" camera:entries="@array/pref_camera_whitebalance_entries" camera:labelList="@array/pref_camera_whitebalance_entries" camera:icons="@array/whitebalance_icons" camera:largeIcons="@array/whitebalance_icons" />
    <CameraSettingIconListPreference camera:title="@string/pref_camera_picturesize_title" camera:key="pref_camera_picturesize_key" camera:defaultValue="@string/pref_camera_picturesize_default" camera:entryValues="@array/pref_camera_picturesize_entryvalues" camera:entries="@array/pref_camera_picturesize_entries" camera:icons="@array/picturesize_icons" camera:largeIcons="@array/picturesize_icons" />
    <CameraSettingListPreference camera:title="@string/pref_camera_focusmode_title" camera:key="pref_camera_focusmode_key" camera:defaultValue="@array/pref_camera_focusmode_default_array" camera:entryValues="@array/pref_camera_focusmode_entryvalues" camera:entries="@array/pref_camera_focusmode_entries" camera:labelList="@array/pref_camera_focusmode_entries" />
    <CameraSettingIconListPreference camera:title="@string/pref_camera_id_title" camera:key="pref_camera_id_key" camera:defaultValue="@string/pref_camera_id_default" camera:entries="@array/camera_id_entries" camera:labelList="@array/camera_id_entries" camera:icons="@array/camera_id_icons" camera:largeIcons="@array/camera_id_largeicons" />
    <CameraSettingIconListPreference camera:title="@string/pref_camera_scenemode_entry_hdr" camera:key="camera_setting_hdr_key" camera:defaultValue="@string/pref_camera_hdr_default" camera:entryValues="@array/pref_camera_hdr_entryvalues" camera:entries="@array/pref_camera_hdr_entries" camera:labelList="@array/pref_camera_hdr_entryvalues" camera:icons="@array/pref_camera_hdr_icons" camera:largeIcons="@array/pref_camera_hdr_icons" />
    <CountDownTimerPreference camera:title="@string/pref_camera_timer_title" camera:key="pref_camera_timer_key" camera:defaultValue="@string/pref_camera_timer_default" />
    <CameraSettingListPreference camera:title="@string/pref_camera_timer_sound_title" camera:key="pref_camera_timer_sound_key" camera:defaultValue="@string/pref_camera_timer_sound_default" camera:entryValues="@array/pref_camera_timer_sound_entryvalues" camera:entries="@array/pref_camera_timer_sound_entries" />
    <CameraSettingIconListPreference camera:title="@string/pref_camera_storage_title" camera:key="camera_setting_storage_key" camera:defaultValue="@string/pref_camera_storage_default" camera:entryValues="@array/pref_camera_storage_entryvalues" camera:entries="@array/pref_camera_storage_entries" camera:icons="@array/camera_storage_icons" camera:largeIcons="@array/camera_storage_icons" />
    <CameraSettingIconListPreference camera:title="@string/pref_camera_sound_capture_title" camera:key="pref_camera_sound_capture_key" camera:defaultValue="@string/pref_camera_voice_shutter_default" camera:entryValues="@array/pref_camera_recordlocation_entryvalues" camera:entries="@array/pref_camera_recordlocation_entries" camera:icons="@array/camera_voice_shutter_icons" camera:largeIcons="@array/camera_voice_shutter_icons" />
    <CameraSettingIconListPreference camera:title="@string/pref_camera_animate_capture_title" camera:key="pref_camera_animate_capture_key" camera:defaultValue="@string/pref_camera_animate_capture_default" camera:entryValues="@array/pref_camera_animate_capture_entryvalues" camera:entries="@array/pref_camera_animate_capture_entries" camera:icons="@array/animate_capture_icons" camera:largeIcons="@array/animate_capture_icons" />
    <CameraSettingIconListPreference camera:title="@string/pref_camera_volume_title" camera:key="pref_camera_volume_key" camera:defaultValue="@string/pref_camera_volume_default" camera:entryValues="@array/pref_camera_volume_entryvalues" camera:entries="@array/pref_camera_volume_entries" camera:icons="@array/volume_icons" camera:largeIcons="@array/volume_icons" />
    <CameraSettingIconListPreference camera:title="@string/pref_camera_focus_mode_title" camera:key="pref_camera_focus_mode_key" camera:defaultValue="@string/pref_camera_focus_mode_default" camera:entryValues="@array/pref_camera_focus_mode_entryvalues" camera:entries="@array/pref_camera_focus_mode_entries" camera:icons="@array/camera_focus_mode_icons" camera:largeIcons="@array/camera_focus_mode_icons" />
    <CameraSettingIconListPreference camera:title="@string/pref_camera_screen_brightness_title" camera:key="pref_camera_screen_brightness_key" camera:defaultValue="@string/pref_camera_screen_brightness_default" camera:entryValues="@array/pref_camera_screen_brightness_entryvalues" camera:entries="@array/pref_camera_screen_brightness_entries" camera:icons="@array/camera_screen_brightness_icons" camera:largeIcons="@array/camera_screen_brightness_icons" />
    <CameraSettingIconListPreference camera:title="@string/pref_camera_touch_shoot_title" camera:key="pref_camera_touch_shoot_key" camera:defaultValue="@string/pref_camera_touch_shoot_default" camera:entryValues="@array/pref_camera_recordlocation_entryvalues" camera:entries="@array/pref_camera_recordlocation_entries" camera:icons="@array/camera_touch_shoot_icons" camera:largeIcons="@array/camera_touch_shoot_icons" />
    <CameraSettingIconListPreference camera:title="@string/camera_setting_gps_tag" camera:key="pref_camera_recordlocation_key" camera:defaultValue="@string/pref_camera_recordlocation_default" camera:entryValues="@array/pref_camera_recordlocation_entryvalues" camera:entries="@array/pref_camera_recordlocation_entries" camera:icons="@array/camera_recordlocation_icons" camera:largeIcons="@array/camera_recordlocation_icons" />
    <CameraSettingIconListPreference camera:title="@string/pref_camera_isovalue_title" camera:key="pref_camera_isovalue_key" camera:defaultValue="@string/pref_camera_isovalue_default" camera:entryValues="@array/pref_camera_isovalue_entryvalues" camera:entries="@array/pref_camera_isovalue_entries" camera:icons="@array/isovalue_icons" camera:largeIcons="@array/isovalue_icons" />
    <CameraSettingIconListPreference camera:title="@string/pref_camera_effects_title" camera:key="pref_camera_effect_key" camera:defaultValue="@string/pref_camera_effect_default" camera:entryValues="@array/pref_camera_effect_entryvalues" camera:entries="@array/pref_camera_effect_entries" camera:icons="@array/effect_icons" camera:largeIcons="@array/effect_icons" />
    <CameraSettingListPreference camera:title="@string/pref_camera_brightness_title" camera:key="pref_camera_brightness_key" camera:defaultValue="@string/pref_camera_brightness_default" camera:entryValues="@array/pref_camera_brightness_entryvalues" camera:entries="@array/pref_camera_brightness_entries" />
    <CameraSettingIconListPreference camera:title="@string/pref_camera_metering_title" camera:key="camera_setting_ce_guang_key" camera:defaultValue="@string/pref_camera_metering_default" camera:entryValues="@array/pref_camera_metering_entryvalues" camera:entries="@array/pref_camera_metering_entries" camera:icons="@array/metering_icons" camera:largeIcons="@array/metering_icons" />
    <CameraSettingListPreference camera:title="@string/pref_camera_contrast_title" camera:key="pref_camera_contrast_key" camera:defaultValue="@string/pref_camera_brightness_default" camera:entryValues="@array/pref_camera_brightness_entryvalues" camera:entries="@array/pref_camera_brightness_entries" />
    <CameraSettingListPreference camera:title="@string/pref_camera_saturation_title" camera:key="pref_camera_saturation_key" camera:defaultValue="@string/pref_camera_brightness_default" camera:entryValues="@array/pref_camera_brightness_entryvalues" camera:entries="@array/pref_camera_brightness_entries" />
    <CameraSettingListPreference camera:title="@string/pref_camera_sharpness_title" camera:key="pref_camera_sharpness_key" camera:defaultValue="@string/pref_camera_brightness_default" camera:entryValues="@array/pref_camera_brightness_entryvalues" camera:entries="@array/pref_camera_brightness_entries" />
    <CameraSettingIconListPreference camera:title="@string/pref_camera_antibanding_title" camera:key="pref_camera_antibanding_key" camera:defaultValue="@string/pref_camera_antibanding_default" camera:entryValues="@array/pref_camera_antibanding_entryvalues" camera:entries="@array/pref_camera_antibanding_entries" camera:icons="@array/antibanding_icons" camera:largeIcons="@array/antibanding_icons" />
    <CameraSettingIconListPreference camera:title="@string/pref_camera_shutter_sound_title" camera:key="pref_camera_shutter_sound_key" camera:defaultValue="@string/pref_camera_shutter_sound_default" camera:entryValues="@array/pref_camera_shutter_sound_entryvalues" camera:entries="@array/pref_camera_shutter_sound_entries" camera:icons="@array/shutter_sound_icons" camera:largeIcons="@array/shutter_sound_icons" />
    <CameraSettingIconListPreference camera:title="@string/pref_camera_jpeg_qual_title" camera:key="pref_camera_jpeg_qual_key" camera:defaultValue="@string/pref_camera_jpeg_qual_default" camera:entryValues="@array/pref_camera_jpeg_qual_entryvalues" camera:entries="@array/pref_camera_jpeg_qual_entries" camera:icons="@array/jpeg_qual_icons" camera:largeIcons="@array/jpeg_qual_icons" />
    <CameraSettingIconListPreference camera:title="@string/pref_camera_auxiliaryline_title" camera:key="pref_camera_auxiliaryline_key" camera:defaultValue="@string/pref_camera_auxiliaryline_default" camera:entryValues="@array/pref_camera_auxiliaryline_entriesvalues" camera:entries="@array/pref_camera_auxiliaryline_entries" camera:icons="@array/auxiliaryline_icons" camera:largeIcons="@array/auxiliaryline_icons" />
    <CameraSettingIconListPreference camera:title="@string/pref_camera_smart_light_title" camera:key="pref_camera_smart_light_key" camera:defaultValue="@string/pref_camera_recordlocation_default" camera:entryValues="@array/pref_camera_recordlocation_entryvalues" camera:entries="@array/pref_camera_recordlocation_entries" camera:icons="@array/camera_smart_light_icons" camera:largeIcons="@array/camera_smart_light_icons" />
    <CameraSettingIconListPreference camera:title="@string/pref_video_quality_title" camera:key="pref_video_quality_key" camera:defaultValue="@string/pref_video_quality_default" camera:entryValues="@array/pref_video_quality_entryvalues" camera:entries="@array/pref_video_quality_entries" camera:icons="@array/video_quality_icons" camera:largeIcons="@array/video_quality_icons" camera:images="@array/video_quality_icons" />
</CameraSettingPreferenceGroup>